# automatic_ml_model

./: .gitignore  README.md  pyproject.toml
.claude/skills/image-ml-agent/: SKILL.md
.claude/skills/image-ml-agent/references/: annotation.md  collection.md  pipeline.md
.claude/skills/image-ml-agent/scripts/: merge_annotations.py
app/: annotate.py  collect.py
pipeline/: config.py  designer.py  extract.py  llm.py  report.py  run_loop.py  select.py  split.py  train.py  verify.py
scripts/: collect_images.py  make_dummy_dataset.py
scripts/sources/: __init__.py  base.py  flickr.py  google_cse.py  openverse.py  pexels.py  pixabay.py  wikimedia.py
tests/: conftest.py  test_collect_plan.py  test_config.py  test_designer.py  test_extract.py  test_report.py  test_run_loop.py  test_select.py  test_sources.py  test_split.py  test_train.py  test_verify.py
